MSS-2492-mcs-plp-product-recommender-gap-bug-fix

--- a/mcsus/cartridges/app_custom_mcsus_redesign/cartridge/client/default/scss/components/_productTiles.scss
+++ b/mcsus/cartridges/app_custom_mcsus_redesign/cartridge/client/default/scss/components/_productTiles.scss
@@ -460,7 +460,7 @@
             margin-bottom: 0;
 
             .cs-carousel {
-                margin-bottom: 0;
+                margin-bottom: rem(20);
                 padding-bottom: 0;
             }
         }
